[tool.poetry]
name = "cross-product"
version = "0.1.3"
description = "An entry for NaNoGenMo 2022"
authors = ["Ben Steinberg"]
readme = "README.md"
packages = [{include = "cross_product"}]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
lxml = "^4.9.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
cross = "cross_product.main:cross"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
